--- a/public/mkt.html
+++ b/public/mkt.html
@@ -2381,12 +2381,15 @@
         }
 
         .keai-mkt-form .checkbox-group {
-            grid-template-columns: 1fr;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
             gap: 8px;
         }
 
         .keai-mkt-form .checkbox-label {
             font-size: 13px;
+            width: auto;
         }
 
         .keai-mkt-form .checkbox-label input {
