--- a/public/dashboard/leads.html
+++ b/public/dashboard/leads.html
@@ -11,7 +11,7 @@
     </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>접수 관리 - 한결컨설팅 관리자</title>
+    <title>접수 관리 - KEAI 관리자</title>
     <meta name="robots" content="noindex, nofollow">
     <link rel="icon" type="image/png" href="/favicon.png">
     <link rel="stylesheet" href="../css/dashboard.css">
