--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -11,7 +11,7 @@
   </script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>대시보드 - 한결컨설팅</title>
+  <title>대시보드 - KEAI</title>
   <link rel="stylesheet" href="../css/dashboard.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css">
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
