--- a/public/dashboard/images.html
+++ b/public/dashboard/images.html
@@ -11,7 +11,7 @@
   </script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>이미지 관리 - 한결컨설팅</title>
+  <title>이미지 관리 - KEAI</title>
   <link rel="stylesheet" href="../css/dashboard.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css">
   <style>
@@ -432,7 +432,7 @@
   <script src="../js/components.js"></script>
   <script>
     const API_BASE = '/api';
-    const authToken = localStorage.getItem('adminPassword') || '';
+    const authToken = 'keai2025';
     let allImages = [];
     let groupedImages = {};
     let categories = [];
